# pymodaq_plugins_datamixer

./: .gitignore  README.rst  plugin_info.toml  pyproject.toml
.github/workflows/: Testbase.yml  python-publish.yml
src/pymodaq_plugins_datamixer/: __init__.py  utils.py
src/pymodaq_plugins_datamixer/daq_viewer_plugins/plugins_0D/: daq_0Dviewer_DataMixer.py
src/pymodaq_plugins_datamixer/extensions/: data_mixer.py
src/pymodaq_plugins_datamixer/extensions/utils/: model.py  parser.py
src/pymodaq_plugins_datamixer/models/: equation_model.py  fit_model.py  harmonics_model.py
src/pymodaq_plugins_datamixer/resources/: config_template.toml
tests/: test_formula_parser.py
