[features]  # defines the plugin features contained into this plugin
instruments = true  # true if plugin contains instrument classes (else false, notice the lowercase for toml files)
extensions = true  # true if plugins contains dashboard extensions
models = true  # true if plugins contains models
h5exporters = false  # true if plugin contains custom h5 file exporters
scanners = false  # true if plugin contains custom scan layout (daq_scan extensions)

[build-system]
requires = ["hatchling>=1.9.0", "hatch-vcs", "toml", "pymodaq_utils"]
build-backend = "hatchling.build"

[urls]
package-url = 'https://github.com/PyMoDAQ/pymodaq_plugins_datamixer'

[project]
dynamic = ["version", "urls", "entry-points"]
readme = "README.rst"
license = { file="LICENSE" }
requires-python = ">=3.8"
description = 'Implements an extension to manipulate data from several DAQ_Viewers'
name = "pymodaq_plugins_datamixer"
authors = [
    {name='Sebastien J. Weber', email='sebastien.weber@cnrs.fr'}
]
dependencies = [
    "pymodaq>=5.1.0.alpha"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
]

[tool.hatch.metadata.hooks.custom]

[tool.hatch.version]
source = "vcs"
fallback-version = '0.0.1'

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
